# devsecops-pipeline

./: .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CI_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_RESULTS.md  DEVELOPMENT.md  QUICKREF.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  run_demo.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml
demos/: README.md  demo_insecure.py
src/: __init__.py  app.py  demo_secure.py  test_app.py  utils.py
tools/: __init__.py  merge_reports.py
