[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-pipeline"
version = "1.0.0"
description = "A comprehensive DevSecOps CI/CD pipeline with automated security scanning, SBOM generation, and policy enforcement"
readme = "README.md"
authors = [
    {name = "Aryan Singh Shaktawat", email = "aryansinghshaktawat@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["devsecops", "security", "ci-cd", "sast", "sbom", "pipeline", "github-actions"]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0,<3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "bandit[toml]>=1.7.5",
    "pip-audit>=2.6.0",
    "cyclonedx-bom>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/aryansinghshaktawat/devsecops-pipeline"
Documentation = "https://github.com/aryansinghshaktawat/devsecops-pipeline#readme"
Repository = "https://github.com/aryansinghshaktawat/devsecops-pipeline"
Issues = "https://github.com/aryansinghshaktawat/devsecops-pipeline/issues"
Changelog = "https://github.com/aryansinghshaktawat/devsecops-pipeline/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["src", "tools"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.bandit]
exclude_dirs = ["/test", "/.venv", "/venv"]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["*/test_*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
